--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     
     <!-- App Logic -->
-    <script src="js/script.js"></script>
+    <!-- App Logic -->
+    <script src="js/models/person.js"></script>
+    <script src="js/models/couple.js"></script>
+    <script src="js/services/data-loader.js"></script>
+    <script src="js/services/tree-builder.js"></script>
+    <script src="js/view/renderer.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
