--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-dagre@2.5.0/cytoscape-dagre.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 
-    <!-- App Logic -->
+    <!-- Physics Layout -->
+    <script src="https://unpkg.com/webcola@3.4.0/WebCola/cola.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/cytoscape-cola@2.5.1/cytoscape-cola.min.js"></script>
+
     <!-- App Logic -->
     <script src="js/models/person.js"></script>
     <script src="js/models/couple.js"></script>
