feat: Implement Cytoscape.js family tree visualization with new styling, interactive layout, and cache-busting script updates.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <script src="https://cdn.jsdelivr.net/npm/cytoscape-cola@2.5.1/cytoscape-cola.min.js"></script>
 
     <!-- App Logic -->
-    <script src="js/models/person.js"></script>
-    <script src="js/models/couple.js"></script>
-    <script src="js/services/data-loader.js"></script>
-    <script src="js/services/graph-builder.js"></script>
-    <script src="js/view/renderer.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/models/person.js?v=3"></script>
+    <script src="js/models/couple.js?v=3"></script>
+    <script src="js/services/data-loader.js?v=3"></script>
+    <script src="js/services/graph-builder.js?v=3"></script>
+    <script src="js/view/renderer.js?v=3"></script>
+    <script src="js/app.js?v=3"></script>
 </body>
 
 </html>
